src/parser/peg/scad-peg-parser.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$DefaultTracer() {
  this.indentLevel = 0;
}

peg$DefaultTracer.prototype.trace = function(event) {
  var that = this;

  function log(event) {
    function repeat(string, n) {
       var result = "", i;

       for (i = 0; i < n; i++) {
         result += string;
       }

       return result;
    }

    function pad(string, length) {
      return string + repeat(" ", length - string.length);
    }

    if (typeof console === "object") {
      console.log(
        event.location.start.line + ":" + event.location.start.column + "-"
          + event.location.end.line + ":" + event.location.end.column + " "
          + pad(event.type, 10) + " "
          + repeat("  ", that.indentLevel) + event.rule
      );
    }
  }

  switch (event.type) {
    case "rule.enter":
      log(event);
      this.indentLevel++;
      break;

    case "rule.match":
      this.indentLevel--;
      log(event);
      break;

    case "rule.fail":
      this.indentLevel--;
      log(event);
      break;

    default:
      throw new Error("Invalid event type: " + event.type + ".");
  }
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { RootNode: peg$parseRootNode },
      peg$startRuleFunction  = peg$parseRootNode,

      peg$c0 = peg$otherExpectation("RootNode"),
      peg$c1 = function(statements) { 
          return new RootNode(statements); 
      },
      peg$c2 = peg$otherExpectation("StatementNode"),
      peg$c3 = function(statement) { return statement; },
      peg$c4 = peg$otherExpectation("BlockNode"),
      peg$c5 = function(children) { return new BlockNode(children); },
      peg$c6 = peg$otherExpectation("CommentNode"),
      peg$c7 = "/*",
      peg$c8 = peg$literalExpectation("/*", false),
      peg$c9 = /^[^*]/,
      peg$c10 = peg$classExpectation(["*"], true, false),
      peg$c11 = "*",
      peg$c12 = peg$literalExpectation("*", false),
      peg$c13 = /^[^\/*]/,
      peg$c14 = peg$classExpectation(["/", "*"], true, false),
      peg$c15 = "/",
      peg$c16 = peg$literalExpectation("/", false),
      peg$c17 = function(head, tail) { 
              return new CommentNode(head.toString() + _.map(tail, (element) => {
                  return element[0] + element[1].toString();
              }), true);
          },
      peg$c18 = "//",
      peg$c19 = peg$literalExpectation("//", false),
      peg$c20 = " ",
      peg$c21 = peg$literalExpectation(" ", false),
      peg$c22 = /^[^\n]/,
      peg$c23 = peg$classExpectation(["\n"], true, false),
      peg$c24 = "\n",
      peg$c25 = peg$literalExpectation("\n", false),
      peg$c26 = function(text) { return new CommentNode(text.toString()); },
      peg$c27 = peg$otherExpectation("Include"),
      peg$c28 = "include",
      peg$c29 = peg$literalExpectation("include", false),
      peg$c30 = function(path) { return new IncludeNode(path); },
      peg$c31 = "use",
      peg$c32 = peg$literalExpectation("use", false),
      peg$c33 = function(path) { return new UseNode(path); },
      peg$c34 = peg$otherExpectation("IncludeFile"),
      peg$c35 = /^[.A-Za-z0-9\-_\/]/,
      peg$c36 = peg$classExpectation([".", ["A", "Z"], ["a", "z"], ["0", "9"], "-", "_", "/"], false, false),
      peg$c37 = function(path) { return path.toString(); },
      peg$c38 = peg$otherExpectation("ModuleNode"),
      peg$c39 = "module",
      peg$c40 = peg$literalExpectation("module", false),
      peg$c41 = function(name, params, block) { return new ModuleNode(name, params, block); },
      peg$c42 = peg$otherExpectation("FunctionNode"),
      peg$c43 = "function",
      peg$c44 = peg$literalExpectation("function", false),
      peg$c45 = function(name, params, expression) { return null/*new FunctionNode('Function', {name, params, expression})*/; },
      peg$c46 = peg$otherExpectation("ActionNode"),
      peg$c47 = function(modifier, name, params, operators) { 
              return new ActionNode(name, params, modifier, operators);
          },
      peg$c48 = function(modifier, name, params, operators, block) { 
              return new ActionNode(name, params, modifier, operators, block);
          },
      peg$c49 = peg$otherExpectation("ActionOperators"),
      peg$c50 = function(modifier, name, params) { return new ActionNode(name, params, modifier); },
      peg$c51 = peg$otherExpectation("ActionModifiers"),
      peg$c52 = /^[#%!*]/,
      peg$c53 = peg$classExpectation(["#", "%", "!", "*"], false, false),
      peg$c54 = function(modifier) { 
                  return modifier;
               },
      peg$c55 = peg$otherExpectation("ForLoopNode"),
      peg$c56 = "for",
      peg$c57 = peg$literalExpectation("for", false),
      peg$c58 = "(",
      peg$c59 = peg$literalExpectation("(", false),
      peg$c60 = ")",
      peg$c61 = peg$literalExpectation(")", false),
      peg$c62 = function(params, block) { 
              return new ForLoopNode(params, modifier, operators);
          },
      peg$c63 = peg$otherExpectation("ForLoopParameterList"),
      peg$c64 = /^[^)]/,
      peg$c65 = peg$classExpectation([")"], true, false),
      peg$c66 = function() { return new ForLoopParameterListNode([]); },
      peg$c67 = peg$otherExpectation("VariableNode"),
      peg$c68 = function(name, value) { return new VariableNode(name, value); },
      peg$c69 = peg$otherExpectation("Float"),
      peg$c70 = "-",
      peg$c71 = peg$literalExpectation("-", false),
      peg$c72 = /^[0-9.]/,
      peg$c73 = peg$classExpectation([["0", "9"], "."], false, false),
      peg$c74 = function(neg, value) { return new NumberValue(parseFloat(value.toString(),10), neg); },
      peg$c75 = peg$otherExpectation("String"),
      peg$c76 = function(value) { return new StringValue(value.toString()); },
      peg$c77 = peg$otherExpectation("Range"),
      peg$c78 = function(definition) {  return new RangeValue(definition.start, definition.middle, definition.tail); },
      peg$c79 = ":",
      peg$c80 = peg$literalExpectation(":", false),
      peg$c81 = function(start, middle, tail) { return { start, middle, tail: tail }; },
      peg$c82 = peg$otherExpectation("Vector"),
      peg$c83 = function(neg, values) {  return new VectorValue(values, neg); },
      peg$c84 = function(head, tail) { return _.concat({value:head}, tail); },
      peg$c85 = function(value) {return value;},
      peg$c86 = peg$otherExpectation("Reference"),
      peg$c87 = function(neg, ref) {  return new ReferenceValue(ref, neg, true); },
      peg$c88 = peg$otherExpectation("Value"),
      peg$c89 = peg$otherExpectation("Name"),
      peg$c90 = /^[A-Za-z]/,
      peg$c91 = peg$classExpectation([["A", "Z"], ["a", "z"]], false, false),
      peg$c92 = /^[A-Za-z0-9_]/,
      peg$c93 = peg$classExpectation([["A", "Z"], ["a", "z"], ["0", "9"], "_"], false, false),
      peg$c94 = function(head, tail) { return head + (tail.toString() || ''); },
      peg$c95 = "$",
      peg$c96 = peg$literalExpectation("$", false),
      peg$c97 = peg$otherExpectation("ExpressionNode"),
      peg$c98 = function(head, tail) { 
              if(tail.length > 0)
                  return new ExpressionNode(_.concat([head], tail));
              else
                  return new ExpressionNode([head]);
               },
      peg$c99 = peg$otherExpectation("TermNode"),
      peg$c100 = function(head, tail) {
              if(tail.length > 0)
                  return new TermNode(_.concat([head], tail));
              else
                  return new TermNode([head]);
                },
      peg$c101 = peg$otherExpectation("TermOperator"),
      peg$c102 = /^[+\-*\/%]/,
      peg$c103 = peg$classExpectation(["+", "-", "*", "/", "%"], false, false),
      peg$c104 = function(op) { return op[0]; },
      peg$c105 = peg$otherExpectation("FactorNode"),
      peg$c106 = function(neg, value) { return new FactorNode(value, neg?true:false); },
      peg$c107 = function(neg, name) { return new FactorNode(name, neg?true:false, {_name:name}); },
      peg$c108 = peg$otherExpectation("ParameterList"),
      peg$c109 = function(head, tail) { 
              if(tail.length > 0)
                  return new ParameterListNode(_.concat(head, tail));
              else
                  return new ParameterListNode([head]);
          },
      peg$c110 = peg$otherExpectation("ParameterListItem"),
      peg$c111 = function(name, value) { 
                  if(_.isArray(name))
                      return new ParameterNode(new VariableNode(name[0], value)); 
                  else
                      return new ParameterNode(value);
              },
      peg$c112 = peg$otherExpectation("ParameterDefinitionList"),
      peg$c113 = function(head, tail) { 
              if(tail.length > 0)
                  return new ParameterListNode(_.concat(head, tail), true);
              else
                  return new ParameterListNode([head], true);
          },
      peg$c114 = peg$otherExpectation("ParameterDefinitionListItem"),
      peg$c115 = peg$otherExpectation("Assignment"),
      peg$c116 = "=",
      peg$c117 = peg$literalExpectation("=", false),
      peg$c118 = peg$otherExpectation("WhiteSpace"),
      peg$c119 = /^[ \t\r\n\f]/,
      peg$c120 = peg$classExpectation([" ", "\t", "\r", "\n", "\f"], false, false),
      peg$c121 = peg$otherExpectation("EndOfStatement"),
      peg$c122 = ";",
      peg$c123 = peg$literalExpectation(";", false),
      peg$c124 = peg$otherExpectation("RoundBraceOpen"),
      peg$c125 = peg$otherExpectation("RoundBraceClose"),
      peg$c126 = peg$otherExpectation("CurlyBraceOpen"),
      peg$c127 = "{",
      peg$c128 = peg$literalExpectation("{", false),
      peg$c129 = peg$otherExpectation("CurlyBraceClose"),
      peg$c130 = "}",
      peg$c131 = peg$literalExpectation("}", false),
      peg$c132 = peg$otherExpectation("SquareBraceOpen"),
      peg$c133 = "[",
      peg$c134 = peg$literalExpectation("[", false),
      peg$c135 = peg$otherExpectation("SquareBraceClose"),
      peg$c136 = "]",
      peg$c137 = peg$literalExpectation("]", false),
      peg$c138 = peg$otherExpectation("AngleBraceOpen"),
      peg$c139 = "<",
      peg$c140 = peg$literalExpectation("<", false),
      peg$c141 = peg$otherExpectation("AngleBraceClose"),
      peg$c142 = ">",
      peg$c143 = peg$literalExpectation(">", false),
      peg$c144 = peg$otherExpectation("Characters"),
      peg$c145 = /^[^\0-\x1F"\\]/,
      peg$c146 = peg$classExpectation([["\0", "\x1F"], "\"", "\\"], true, false),
      peg$c147 = peg$otherExpectation("QuotationMark"),
      peg$c148 = "\"",
      peg$c149 = peg$literalExpectation("\"", false),
      peg$c150 = peg$otherExpectation("Comma"),
      peg$c151 = ",",
      peg$c152 = peg$literalExpectation(",", false),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$tracer = "tracer" in options ? options.tracer : new peg$DefaultTracer(),

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseRootNode() {
    var s0, s1, s2, s3,
        startPos = peg$currPos;

    peg$tracer.trace({
      type:     "rule.enter",
      rule:     "RootNode",
      location: peg$computeLocation(startPos, startPos)
    });

    peg$silentFails++;
    s0 = peg$currPos;
    s1 = peg$parseWhiteSpace();
    if (s1 === peg$FAILED) {
      s1 = null;
    }
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parseStatementNode();
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parseStatementNode();
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parseWhiteSpace();
        if (s3 === peg$FAILED) {
          s3 = null;
        }
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c1(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c0); }
    }

    if (s0 !== peg$FAILED) {
      peg$tracer.trace({
        type:   "rule.match",
        rule:   "RootNode",
        result: s0,
        location: peg$computeLocation(startPos, peg$currPos)
      });
    } else {
      peg$tracer.trace({
        type: "rule.fail",
        rule: "RootNode",
        location: peg$computeLocation(startPos, startPos)
      });
    }

    return s0;
  }

  function peg$parseStatementNode() {
    var s0, s1, s2,
        startPos = peg$currPos;

    peg$tracer.trace({
      type:     "rule.enter",
      rule:     "StatementNode",
      location: peg$computeLocation(startPos, startPos)
    });

    peg$silentFails++;
    s0 = peg$currPos;
    s1 = peg$parseCommentNode();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseWhiteSpace();
      if (s2 === peg$FAILED) {
        s2 = null;
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c3(s1);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parseModuleNode();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseWhiteSpace();
        if (s2 === peg$FAILED) {
          s2 = null;
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c3(s1);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parseIncludeNode();
        if (s1 !== peg$FAILED) {
          s2 = peg$parseWhiteSpace();
          if (s2 === peg$FAILED) {
            s2 = null;
          }
          if (s2 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c3(s1);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$parseFunctionNode();
          if (s1 !== peg$FAILED) {
            s2 = peg$parseWhiteSpace();
            if (s2 === peg$FAILED) {
              s2 = null;
            }
            if (s2 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c3(s1);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
          if (s0 === peg$FAILED) {
            s0 = peg$currPos;
            s1 = peg$parseVariableNode();
            if (s1 !== peg$FAILED) {
              s2 = peg$parseWhiteSpace();
              if (s2 === peg$FAILED) {
                s2 = null;
              }
              if (s2 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c3(s1);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
            if (s0 === peg$FAILED) {
              s0 = peg$currPos;
              s1 = peg$parseActionNode();
              if (s1 !== peg$FAILED) {
                s2 = peg$parseWhiteSpace();
                if (s2 === peg$FAILED) {
                  s2 = null;
                }
                if (s2 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$c3(s1);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            }
          }
        }
      }
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c2); }
    }

    if (s0 !== peg$FAILED) {
      peg$tracer.trace({
        type:   "rule.match",
        rule:   "StatementNode",
        result: s0,
        location: peg$computeLocation(startPos, peg$currPos)
      });
    } else {
      peg$tracer.trace({
        type: "rule.fail",
        rule: "StatementNode",
        location: peg$computeLocation(startPos, startPos)
      });
    }

    return s0;
  }

  function peg$parseBlockNode() {
    var s0, s1, s2, s3,
        startPos = peg$currPos;

    peg$tracer.trace({
      type:     "rule.enter",
      rule:     "BlockNode",
      location: peg$computeLocation(startPos, startPos)
    });

    peg$silentFails++;
    s0 = peg$currPos;
    s1 = peg$parseCurlyBraceOpen();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parseStatementNode();
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parseStatementNode();
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parseCurlyBraceClose();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c5(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c4); }
    }

    if (s0 !== peg$FAILED) {
      peg$tracer.trace({
        type:   "rule.match",
        rule:   "BlockNode",
        result: s0,
        location: peg$computeLocation(startPos, peg$currPos)
      });
    } else {
      peg$tracer.trace({
        type: "rule.fail",
        rule: "BlockNode",
        location: peg$computeLocation(startPos, startPos)
      });
    }

    return s0;
  }

  function peg$parseCommentNode() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9,
        startPos = peg$currPos;

    peg$tracer.trace({
      type:     "rule.enter",
      rule:     "CommentNode",
      location: peg$computeLocation(startPos, startPos)
    });
